array.island.Island.scala.error
Compilation error:
Island:16: error: '=' expected but ';' found.
  var levels[Boolean](max-min+1);
                                ^